--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_auth: ^4.17.9
+  firebase_core: ^2.27.1
+  image_picker: ^1.0.7
+  photo_manager: ^3.0.0
+  photo_manager_image_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
