--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    
+
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
     <application
         android:label="social_media"
         android:name="${applicationName}"
