--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  cloud_firestore: ^4.15.10
   firebase_auth: ^4.17.9
   firebase_core: ^2.27.1
   image_picker: ^1.0.7
+  like_button: ^2.0.5
   photo_manager: ^3.0.0
   photo_manager_image_provider: ^2.1.1
+  carousel_slider: ^4.2.1
+  firebase_storage: ^11.6.11
+
 
 dev_dependencies:
   flutter_test:
