--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   like_button: ^2.0.5
   photo_manager: ^3.0.0
   photo_manager_image_provider: ^2.1.1
+  path: ^1.9.0
   carousel_slider: ^4.2.1
   firebase_storage: ^11.6.11
   flutter_profile_picture: ^2.0.0
